src/test/deca/context/invalid/personalTests/cast_incompatible.deca
{
    int b = 3;
    float a = (float) (b);
    int c = (boolean) (3.14);
    println(a, " ", c);
}